fix header overspill bug

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -14,7 +14,7 @@
     -o-background-size: contain;
     background-size: contain;
     font-size: 2.8rem;
-    min-height: 300px;
+    min-height: 400px;
     justify-content: center;
     background-color: #ffffff;
 
